--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.2.0",
+    "@vercel/postgres": "^0.4.1",
     "next": "12.0.10",
+    "next-auth": "^4.23.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "prisma": "^5.2.0",
     "typescript": "4.5.5"
   }
 }
